[gd_scene load_steps=53 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/play.png" type="Texture" id=2]
[ext_resource path="res://assets/controls.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/start_click.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/menu_click.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/TitleSpriteSheet.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 1200, 720 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 0, 1200, 720 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 0, 1200, 720 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 0, 1200, 720 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 0, 1200, 720 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 720, 1200, 720 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 720, 1200, 720 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 720, 1200, 720 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 720, 1200, 720 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 720, 1200, 720 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 1440, 1200, 720 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 1440, 1200, 720 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 1440, 1200, 720 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 1440, 1200, 720 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 1440, 1200, 720 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 2160, 1200, 720 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 2160, 1200, 720 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 2160, 1200, 720 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 2160, 1200, 720 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 2160, 1200, 720 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 2880, 1200, 720 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 2880, 1200, 720 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 2880, 1200, 720 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 2880, 1200, 720 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 2880, 1200, 720 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 3600, 1200, 720 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 3600, 1200, 720 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 3600, 1200, 720 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 3600, 1200, 720 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 3600, 1200, 720 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 4320, 1200, 720 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 4320, 1200, 720 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 4320, 1200, 720 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 4320, 1200, 720 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 4320, 1200, 720 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 5040, 1200, 720 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 5040, 1200, 720 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 5040, 1200, 720 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 5040, 1200, 720 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 5040, 1200, 720 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 5760, 1200, 720 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1200, 5760, 1200, 720 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2400, 5760, 1200, 720 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3600, 5760, 1200, 720 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4800, 5760, 1200, 720 )

[sub_resource type="SpriteFrames" id=46]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "TitleScroll",
"speed": 24.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.22772
margin_bottom = -1.22772
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 520.0
margin_bottom = 560.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 254.0
margin_top = 130.0
margin_right = 266.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="AnimatedSprite" parent="VBoxContainer/CenterContainer/TitleButton"]
position = Vector2( 9.15784, -9.46033 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 46 )
animation = "TitleScroll"
frame = 18
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 520.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="PlayContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="VBoxContainer/VBoxContainer/PlayContainer"]
margin_left = 193.0
margin_top = 37.0
margin_right = 327.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )
flat = true

[node name="ControlsContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 520.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlsButton" type="Button" parent="VBoxContainer/VBoxContainer/ControlsContainer"]
margin_left = 126.0
margin_top = 37.0
margin_right = 393.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 3 )
flat = true

[node name="ControlsPopup" type="WindowDialog" parent="."]
visible = true
margin_left = 163.0
margin_top = 242.0
margin_right = 363.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 20, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
popup_exclusive = true
window_title = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ControlsPopup"]
margin_top = 0.470184
margin_right = 212.0
margin_bottom = 177.47
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Arrow Keys:  Move Tile
Z: Rotate Left
X: Rotate Right
C: Hold Tile
P: Pause Game
D: Drop Tile

If on mobile, swipe to move tiles.
Swipe up to hold tile. 
Tap to rotate tile."
scroll_active = false

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/VBoxContainer/PlayContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ControlsContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
